--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Redux App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/darkly/bootstrap.min.css">
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 
